# ranking-dsl

./: .gitignore  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_v0.2.8.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
configs/: complexity_budgets.json
docs/: complexity-governance.md  engine.md  multi_engine_readiness_design_doc.md  node-authoring.md  spec.md  workflows.md
engine/: CMakeLists.txt
engine/src/: export_nodes.cpp  main.cpp
engine/src/executor/: executor.cpp  executor.h
engine/src/expr/: expr.cpp  expr.h
engine/src/keys/: registry.cpp  registry.h
engine/src/logging/: trace.cpp  trace.h
engine/src/nodes/: node_runner.h  registry.cpp  registry.h
engine/src/nodes/core/: features.cpp  merge.cpp  model.cpp  score_formula.cpp  sourcer.cpp
engine/src/nodes/js/: batch_context.cpp  batch_context.h  njs_runner.cpp  njs_runner.h
engine/src/object/: batch_builder.cpp  batch_builder.h  candidate_batch.h  column.cpp  column.h  column_batch.cpp  column_batch.h  obj.cpp  obj.h  row_view.cpp  row_view.h  typed_column.cpp  typed_column.h  value.cpp  value.h
engine/src/plan/: compiler.cpp  compiler.h  complexity.cpp  complexity.h  plan.cpp  plan.h
engine/tests/: column_batch_test.cpp  columnar_eval_test.cpp  complexity_test.cpp  expr_eval_test.cpp  key_enforcement_test.cpp  njs_runner_test.cpp  obj_test.cpp  plan_compiler_test.cpp  plan_env_test.cpp  row_view_test.cpp  test_main.cpp
engine/tests/testdata/: budget_exceeded.njs  io_capability_module.njs  io_no_budget_module.njs  io_traversal_attack.njs  no_io_capability_module.njs  unauthorized_write.njs  valid_module.njs
engine/tests/testdata/csv/: sample.csv
keys/: registry.yaml
test-fixtures/: complexity-fixture.plan.json
tools/cli/: package.json  tsconfig.json
tools/cli/src/: index.ts
tools/codegen/: package.json
tools/codegen/src/: index.ts  parser.ts  schema.ts
tools/codegen/src/__tests__/: generators.test.ts  parser.test.ts  schema.test.ts
tools/codegen/src/generators/: cpp.ts  json.ts  njs.ts  typescript.ts
tools/expr/: package.json
tools/expr/src/: index.ts
tools/lint/: package.json
tools/lint/src/: gate.ts  index.ts  limits.ts
tools/lint/src/__tests__/: gate.test.ts
tools/nodes-codegen/: package.json
tools/nodes-codegen/src/: codegen.d.ts  codegen.d.ts.map  codegen.js  codegen.js.map  codegen.ts  export.d.ts  export.d.ts.map  export.js  export.js.map  export.ts  index.d.ts  index.d.ts.map  index.js  index.js.map  index.ts
tools/plan-compiler/: package.json  tsconfig.json
tools/plan-compiler/src/: index.ts
tools/shared/: package.json
tools/shared/src/: complexity.ts  expr-ir.ts  index.ts  types.ts
tools/shared/src/__tests__/: expr-ir.test.ts  types.test.ts
tools/shared/tests/: complexity.test.d.ts.map  complexity.test.js  complexity.test.js.map  complexity.test.ts
